--- a/index.html
+++ b/index.html
@@ -1,284 +1,320 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>BE Playsound List</title>
 <style>
-  body {
-    background-color: #111;
-    color: #eee;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 1rem;
-  }
-
-  h1 {
-    text-align: center;
-    color: #90caf9;
-  }
-
-  .sound-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-    gap: 12px;
-    margin-top: 1rem;
-  }
-
-  .card {
-    background-color: #1a1a1a;
-    border: 1px solid #333;
-    border-radius: 12px;
-    padding: 10px 12px;
-    box-shadow: 0 0 5px #000;
-  }
-
-  .card .title {
-    font-weight: bold;
-    margin-bottom: 6px;
-    color: #fff;
-    overflow-wrap: anywhere;
-  }
-
-  .row {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    margin-bottom: 6px;
-  }
-
-  .btn {
-    padding: 5px 10px;
-    border-radius: 8px;
-    border: 1px solid #333;
-    background-color: #2b2b2b;
-    color: #eee;
-    cursor: pointer;
-    transition: all .2s;
-  }
-
-  .btn:hover {
-    background-color: #444;
-  }
-
-  .btn.play.playing {
-    background-color: #16a34a;
-    color: #000;
-    border-color: #16a34a;
-  }
-
-  .btn.stop {
-    background-color: #3a3a3a;
-  }
-
-  .btn.stop:hover {
-    background-color: #555;
-  }
-
-  input[type="range"] {
-    width: 100px;
-  }
-
-  .pitch-val {
-    min-width: 40px;
-    text-align: center;
-  }
-
-  #search {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 1rem;
-    padding: .5rem;
-    width: 300px;
-    border-radius: 6px;
-    border: none;
-    outline: none;
-  }
-
-  #counter {
-    text-align: center;
-    color: #888;
-    margin-bottom: 1rem;
-  }
+  :root { --bg:#111; --panel:#1a1a1a; --line:#2c2c2c; --muted:#aaa; --fg:#eee; --accent:#16a34a; }
+  html,body{margin:0;padding:0;background:#111;color:#eee;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;}
+  .wrap{max-width:960px;margin:0 auto;padding:18px;}
+  h1{margin:8px 0 18px;text-align:center;color:#90caf9;font-weight:800;letter-spacing:.5px}
+  .toolbar{display:flex;gap:10px;align-items:center;justify-content:center;flex-wrap:wrap;margin-bottom:12px}
+  .search{flex:1 1 440px;max-width:560px}
+  .search input{width:100%;padding:10px 12px;border-radius:10px;border:1px solid var(--line);background:#222;color:var(--fg);outline:none}
+  .pagesize select{padding:9px 10px;border-radius:10px;background:#222;border:1px solid var(--line);color:var(--fg)}
+  .pager{display:flex;gap:8px;align-items:center;justify-content:center;margin:8px 0 14px}
+  .muted{color:var(--muted);font-size:.92rem}
+  button{cursor:pointer}
+  .btn{padding:6px 12px;border-radius:10px;border:1px solid var(--line);background:#2b2b2b;color:#eee}
+  .btn:hover{background:#3a3a3a}
+  .btn.play.playing{background:var(--accent);border-color:var(--accent);color:#000}
+  .list{display:flex;flex-direction:column;gap:12px;margin-bottom:40px}
+  .card{background:#1a1a1a;border:1px solid var(--line);border-radius:14px;padding:12px 14px}
+  .title{font-weight:700;margin-bottom:8px;word-break:break-word}
+  .row{display:flex;align-items:center;gap:10px;flex-wrap:wrap;margin:6px 0}
+  .label{color:var(--muted)}
+  input[type="range"]{width:240px}
 </style>
 </head>
 <body>
+  <div class="wrap">
+    <h1>BE Playsound List</h1>
 
-<h1>BE Playsound List</h1>
-<input type="text" id="search" placeholder="Search sounds...">
-<div id="counter">Loading sounds...</div>
-<div id="sound-list" class="sound-list"></div>
+    <div class="toolbar">
+      <div class="search"><input id="q" type="text" placeholder="Search events (e.g., beacon.pow, ui.loom ...)" /></div>
+      <div class="pagesize"><select id="pagesize">
+        <option>25</option><option>50</option><option selected>100</option><option>200</option>
+      </select></div>
+    </div>
+
+    <div class="pager">
+      <button id="prev" class="btn">&lt; Prev</button>
+      <div id="pageinfo" class="muted"></div>
+      <button id="next" class="btn">Next &gt;</button>
+    </div>
+
+    <div id="count" class="muted" style="text-align:center;margin-bottom:10px;"></div>
+    <div id="list" class="list"></div>
+  </div>
 
 <script>
-  const MANIFEST_URL = 'https://1309-boy.github.io/playsoundlist/manifest.json';
-  const DEFINITIONS_URL = 'https://1309-boy.github.io/playsoundlist/sound_definitions.json';
-  const PAGE_SIZE = 100;
+/* -------------------- config -------------------- */
+const GH_BASE = 'https://1309-boy.github.io/playsoundlist';
+const MANIFEST_URL    = `${GH_BASE}/manifest.json`;
+const DEFINITIONS_URL = `${GH_BASE}/sound_definitions.json`;
 
-  let soundDefs = {};
-  let allItems = [];
-  let filtered = [];
-  let currentPage = 0;
+/* -------------------- state --------------------- */
+const state = {
+  items: [],            // [{name, files:[<basepath>], stream?}]
+  filtered: [],
+  itemsByName: new Map(),
+  manifestSet: new Set(),
+  page: 0,
+  pageSize: 100,
+};
 
-  let currentAudio = null;
-  let currentPlayBtn = null;
-  let currentItemKey = null;
+const playIndex = {};   // name -> next index
+let currentAudio = null;
+let currentKey   = null;
+let currentPlayBtn = null;
 
-  const listEl = document.getElementById('sound-list');
-  const counterEl = document.getElementById('counter');
+/* ------------- helpers: DOM refs ---------------- */
+const $list   = document.getElementById('list');
+const $count  = document.getElementById('count');
+const $q      = document.getElementById('q');
+const $pageinfo = document.getElementById('pageinfo');
+const $prev   = document.getElementById('prev');
+const $next   = document.getElementById('next');
+const $pagesize = document.getElementById('pagesize');
 
-  // Pitch helper
-  const getPitchFor = (key) => {
-    const el = document.querySelector(`[data-key="${key}"] .pitch`);
-    return el ? parseFloat(el.value || '1.0') : 1.0;
+/* ------------- normalize / mapping -------------- */
+function normalizeDefSound(s) {
+  if (!s) return null;
+  if (typeof s === 'string') return { name: s };
+  if (typeof s === 'object' && s.name) return { name: s.name };
+  return null;
+}
+function soundToBasePath(s) {
+  // strip "sounds/" prefix -> keep path after it
+  // e.g. "sounds/ambient/nether/mood1" -> "ambient/nether/mood1"
+  return s.replace(/^sounds\//,'');
+}
+function baseToUrl(base){ // base = "ambient/.../mood1"
+  return `${GH_BASE}/sounds_flat/${base}.wav`;
+}
+
+/* manifest membership check (robust to absolute/relative) */
+function inManifest(url){
+  if (state.manifestSet.has(url)) return true;
+  const rel = url.replace(`${GH_BASE}/`,'');
+  if (state.manifestSet.has(rel)) return true;
+  const onlyPath = url.replace(/^https?:\/\/[^/]+\//,'');
+  if (state.manifestSet.has(onlyPath)) return true;
+  return false;
+}
+
+/* ----------------- rendering -------------------- */
+function fmtPage() {
+  const total = state.filtered.length;
+  const pages = Math.max(1, Math.ceil(total / state.pageSize));
+  const page  = Math.min(state.page + 1, pages);
+  $pageinfo.textContent = `Page ${page} of ${pages}`;
+}
+
+function render(){
+  $list.innerHTML = '';
+  const start = state.page * state.pageSize;
+  const end   = Math.min(start + state.pageSize, state.filtered.length);
+  const items = state.filtered.slice(start, end);
+
+  for (const item of items){
+    const card = document.createElement('div');
+    card.className = 'card';
+    card.dataset.key = item.name;
+
+    card.innerHTML = `
+      <div class="title">${item.name}</div>
+      <div class="row">
+        <button class="btn play">Play</button>
+        <button class="btn stop">Stop</button>
+      </div>
+      <div class="row">
+        <span class="label">Pitch:</span>
+        <input class="pitch" type="range" min="0.1" max="2.0" step="0.1" value="1.0"/>
+        <span class="pitch-val">1.0</span>
+      </div>
+    `;
+    $list.appendChild(card);
+  }
+
+  $count.textContent = `Showing ${start+1}-${end} of ${state.filtered.length} sounds`;
+  fmtPage();
+}
+
+/* ----------------- events ----------------------- */
+$q.addEventListener('input', applyFilter);
+$pagesize.addEventListener('change', ()=>{
+  state.pageSize = parseInt($pagesize.value,10);
+  state.page = 0;
+  render();
+});
+$prev.addEventListener('click', ()=>{
+  if (state.page>0){ state.page--; render(); }
+});
+$next.addEventListener('click', ()=>{
+  const pages = Math.ceil(state.filtered.length / state.pageSize);
+  if (state.page < pages-1){ state.page++; render(); }
+});
+
+document.addEventListener('input', (e)=>{
+  if (!e.target.matches('.pitch')) return;
+  const card = e.target.closest('.card');
+  const key  = card?.dataset?.key;
+  card.querySelector('.pitch-val').textContent = e.target.value;
+  if (currentAudio && currentKey === key){
+    currentAudio.playbackRate = parseFloat(e.target.value || '1.0');
+  }
+});
+
+document.addEventListener('click',(e)=>{
+  const playBtn = e.target.closest('.btn.play');
+  if (playBtn){
+    const card = playBtn.closest('.card');
+    const key = card?.dataset?.key;
+    if (key) playKey(key, playBtn);
+    return;
+  }
+  const stopBtn = e.target.closest('.btn.stop');
+  if (stopBtn){
+    const card = stopBtn.closest('.card');
+    const key = card?.dataset?.key;
+    if (key) stopKey(key);
+  }
+});
+
+/* ----------------- logic: play/stop ------------- */
+function nextUrlFor(key){
+  const item = state.itemsByName.get(key);
+  if (!item || !item.files?.length) return null;
+  const idx = ( (playIndex[key]||0) % item.files.length );
+  playIndex[key] = idx + 1;
+  return baseToUrl(item.files[idx]);
+}
+
+async function playKey(key, btn){
+  // stop current
+  if (currentAudio){
+    try { currentAudio.pause(); currentAudio.currentTime = 0; } catch(e){}
+    if (currentPlayBtn) currentPlayBtn.classList.remove('playing');
+    currentAudio = null; currentKey = null; currentPlayBtn = null;
+  }
+
+  const url = nextUrlFor(key);
+  if (!url || !inManifest(url)){
+    alert('Sound not found: ' + key);
+    return;
+  }
+
+  const card = document.querySelector(`.card[data-key="${CSS.escape(key)}"]`);
+  const pitch = parseFloat(card.querySelector('.pitch').value || '1.0');
+
+  const audio = new Audio(url);
+  audio.playbackRate = pitch;
+  currentAudio = audio; currentKey = key; currentPlayBtn = btn;
+  btn.classList.add('playing');
+
+  audio.onended = ()=>{
+    if (currentPlayBtn) currentPlayBtn.classList.remove('playing');
+    currentAudio = null; currentKey = null; currentPlayBtn = null;
   };
 
-  // Load sounds
-  async function loadData() {
-    const res = await fetch(DEFINITIONS_URL);
-    const defs = await res.json();
-    soundDefs = defs;
+  try{ await audio.play(); }
+  catch(err){
+    btn.classList.remove('playing');
+    alert('Playback blocked by browser. Click anywhere on the page then try again.');
+  }
+}
 
-    allItems = Object.keys(defs).map(name => ({
-      name,
-      files: defs[name]?.sounds?.map(s => s.name.replace(/^sounds\//, '')) || []
-    }));
+function stopKey(key){
+  if (currentAudio && currentKey === key){
+    try{ currentAudio.pause(); currentAudio.currentTime = 0; }catch(e){}
+    if (currentPlayBtn) currentPlayBtn.classList.remove('playing');
+    currentAudio = null; currentKey = null; currentPlayBtn = null;
+  }
+}
 
-    filtered = allItems;
-    counterEl.textContent = `${allItems.length} sounds loaded`;
-    renderPage(0);
+/* ----------------- filtering -------------------- */
+function applyFilter(){
+  const q = ($q.value || '').toLowerCase().trim();
+  if (!q){
+    state.filtered = state.items.slice();
+  }else{
+    state.filtered = state.items.filter(it => it.name.toLowerCase().includes(q));
+  }
+  state.page = 0;
+  render();
+}
+
+/* ----------------- loading ---------------------- */
+async function loadManifest(){
+  const r = await fetch(MANIFEST_URL, {cache:'no-store'});
+  if (!r.ok) throw new Error(`manifest load failed: HTTP ${r.status}`);
+  const j = await r.json();
+
+  // try several shapes
+  let urls = [];
+  if (Array.isArray(j)) urls = j;
+  else if (Array.isArray(j.entries)) urls = j.entries.map(e=>e.url).filter(Boolean);
+  else if (Array.isArray(j.urls)) urls = j.urls;
+  else if (j.files && Array.isArray(j.files)) urls = j.files;
+  // store multiple canonical forms
+  const s = new Set();
+  for (const u of urls){
+    if (!u) continue;
+    s.add(u);
+    const rel = u.replace(`${GH_BASE}/`,'');
+    s.add(rel);
+    const onlyPath = u.replace(/^https?:\/\/[^/]+\//,'');
+    s.add(onlyPath);
+  }
+  state.manifestSet = s;
+}
+
+async function loadDefinitions(){
+  const r = await fetch(DEFINITIONS_URL, {cache:'no-store'});
+  if (!r.ok) throw new Error(`sound_definitions load failed: HTTP ${r.status}`);
+  const defsAll = await r.json();
+  const defs = defsAll.sound_definitions || defsAll; // ★ 중요: 실제 사운드가 이 안에 있음
+
+  const items = [];
+  const map = new Map();
+
+  for (const [key, def] of Object.entries(defs)){
+    if (!def || !Array.isArray(def.sounds)) continue;
+
+    const files = def.sounds
+      .map(normalizeDefSound)
+      .filter(Boolean)
+      .map(s => soundToBasePath(s.name))
+      .filter(Boolean)
+      .filter(base => inManifest(baseToUrl(base))); // 실제 wav만
+
+    if (!files.length) continue;
+
+    const item = { name: key, files, stream: !!def.stream };
+    items.push(item);
+    map.set(key, item);
   }
 
-  // Render one page
-  function renderPage(page) {
-    currentPage = page;
-    listEl.innerHTML = '';
-    const start = page * PAGE_SIZE;
-    const end = Math.min(start + PAGE_SIZE, filtered.length);
-    const items = filtered.slice(start, end);
+  items.sort((a,b)=>a.name.localeCompare(b.name));
+  state.items = items;
+  state.itemsByName = map;
+  state.filtered = items.slice();
+}
 
-    for (const item of items) {
-      const div = document.createElement('div');
-      div.className = 'card';
-      div.dataset.key = item.name;
-
-      div.innerHTML = `
-        <div class="title">${item.name}</div>
-        <div class="row">
-          <button class="btn play">Play</button>
-          <button class="btn stop">Stop</button>
-        </div>
-        <div class="row">
-          <label>Pitch:</label>
-          <input type="range" min="0.1" max="2.0" step="0.1" value="1.0" class="pitch">
-          <span class="pitch-val">1.0</span>
-        </div>
-      `;
-      listEl.appendChild(div);
-    }
-
-    counterEl.textContent = `Showing ${start + 1}-${end} of ${filtered.length} sounds`;
+/* ----------------- init ------------------------- */
+(async function init(){
+  try{
+    state.pageSize = parseInt($pagesize.value,10);
+    await loadManifest();
+    await loadDefinitions();
+    render();
+  }catch(err){
+    console.error(err);
+    alert(err.message);
   }
-
-  // Filter
-  document.getElementById('search').addEventListener('input', (e) => {
-    const q = e.target.value.toLowerCase();
-    filtered = allItems.filter(s => s.name.toLowerCase().includes(q));
-    renderPage(0);
-  });
-
-  // Random/Sequential play picker (순차로 바꾸고 싶으면 여기를 수정)
-  const playIndexMap = {};
-  function pickNextUrlFor(key) {
-    const item = allItems.find(s => s.name === key);
-    if (!item || !item.files.length) return null;
-    playIndexMap[key] = (playIndexMap[key] || 0) + 1;
-    const i = (playIndexMap[key] - 1) % item.files.length;
-    return `https://1309-boy.github.io/playsoundlist/sounds_flat/${item.files[i]}.wav`;
-  }
-
-  async function playItem(key, btn) {
-    if (currentAudio) {
-      try { currentAudio.pause(); } catch (e) {}
-      if (currentPlayBtn) currentPlayBtn.classList.remove('playing');
-      currentAudio = null;
-      currentPlayBtn = null;
-      currentItemKey = null;
-    }
-
-    const src = pickNextUrlFor(key);
-    if (!src) {
-      alert('Sound not found: ' + key);
-      return;
-    }
-
-    const audio = new Audio(src);
-    audio.playbackRate = getPitchFor(key);
-    currentAudio = audio;
-    currentPlayBtn = btn;
-    currentItemKey = key;
-    btn.classList.add('playing');
-
-    audio.onended = () => {
-      if (currentPlayBtn) currentPlayBtn.classList.remove('playing');
-      currentAudio = null;
-      currentPlayBtn = null;
-      currentItemKey = null;
-    };
-
-    try {
-      await audio.play();
-    } catch (err) {
-      alert('Playback blocked by browser. Click page first.');
-      btn.classList.remove('playing');
-    }
-  }
-
-  function stopItem(key) {
-    if (currentAudio && currentItemKey === key) {
-      try {
-        currentAudio.pause();
-        currentAudio.currentTime = 0;
-      } catch (e) {}
-      if (currentPlayBtn) currentPlayBtn.classList.remove('playing');
-      currentAudio = null;
-      currentPlayBtn = null;
-      currentItemKey = null;
-    }
-  }
-
-  // Event delegation
-  document.addEventListener('click', (e) => {
-    const playBtn = e.target.closest('.btn.play');
-    if (playBtn) {
-      const card = playBtn.closest('.card');
-      const key = card?.dataset?.key;
-      if (key) playItem(key, playBtn);
-      return;
-    }
-
-    const stopBtn = e.target.closest('.btn.stop');
-    if (stopBtn) {
-      const card = stopBtn.closest('.card');
-      const key = card?.dataset?.key;
-      if (key) stopItem(key);
-      return;
-    }
-  });
-
-  // Pitch change
-  document.addEventListener('input', (e) => {
-    if (e.target.matches('.pitch')) {
-      const val = e.target.value;
-      const card = e.target.closest('.card');
-      const valEl = card.querySelector('.pitch-val');
-      valEl.textContent = val;
-      if (card?.dataset?.key === currentItemKey && currentAudio) {
-        currentAudio.playbackRate = parseFloat(val);
-      }
-    }
-  });
-
-  loadData();
+})();
 </script>
 </body>
 </html>
